<resources>
    <string name="app_name">KotlinMessenger</string>
    <string name="back_to_registration">Back to registration</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="username">Username</string>
</resources>